# FullStackDevLessons

./: README.md  dan.html  index.html  logic.js  new_lesson.html  ollie.html  pyproject.toml  simon.html  style.css  tom.html
api/: main.py  mandelbrot.py
static/: logic.js  style.css
templates/: base.html  homepage.html
