[tool.poetry]
name = "Example Project"
version = "0.0.0"
description = "Example project"
authors = ["Ben Lakeland <bsl204@exeter.ac.uk>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
jinja2 = "^3.1.2"
numpy = "^1.24.2"
opencv-python = "^4.7.0.72"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"